complete public controller
