# app/Http/Controllers/Api/MenusController.php
@@ -3,47 +3,75 @@
 namespace App\Http\Controllers\Api;
 
 use App\Http\Controllers\Controller;
+use App\Http\Resources\Public\MenusResource;
+use App\Models\Menu;
 use Illuminate\Http\Request;
 
 class MenusController extends Controller
 {
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *     path="/v1/menus",
+     *     summary="Get all menus",
+     *     tags={"Menus (Public)"},
+     *
+     *     @OA\Parameter(
+     *         name="search",
+     *         in="query",
+     *
+     *         @OA\Schema(type="string")
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         name="status_id",
+     *         in="query",
+     *         description="Filter by status id",
+     *         required=false,
+     *
+     *         @OA\Schema(type="integer")
+     *     ),
+     *
+     *     @OA\Parameter(
+     *         name="per_page",
+     *         in="query",
+     *         description="Items per page",
+     *         required=false,
+     *
+     *         @OA\Schema(type="integer")
+     *     ),
+     *
+     *     @OA\Response(
+     *         response=200,
+     *         description="Menus list"
+     *     )
+     * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        //
-    }
+        $query = Menu::query();
 
-    /**
-     * Store a newly created resource in storage.
-     */
-    public function store(Request $request)
-    {
-        //
-    }
+        // Search
+        if ($request->has('search') && $request->search != '') {
+            $query->where('name', 'like', '%'.$request->search.'%');
+        }
 
-    /**
-     * Display the specified resource.
-     */
-    public function show(string $id)
-    {
-        //
-    }
+        // Filter example: by menu type
+        if ($request->has('status_id') && $request->status_id != '') {
+            $query->where('status_id', $request->status_id);
+        }
 
-    /**
-     * Update the specified resource in storage.
-     */
-    public function update(Request $request, string $id)
-    {
-        //
-    }
+        // Pagination
+        $perPage = $request->get('per_page', 10);
+        $menus = $query->paginate($perPage);
 
-    /**
-     * Remove the specified resource from storage.
-     */
-    public function destroy(string $id)
-    {
-        //
+        return response()->json([
+            'data' => MenusResource::collection($menus),
+            'meta' => [
+                'current_page' => $menus->currentPage(),
+                'total_page' => $menus->lastPage(),
+                'per_page' => $menus->perPage(),
+                'total' => $menus->total(),
+            ],
+        ], 200);
     }
 }
